Bite 170 Solution some tweaks

--- a/Bite170/mcdonalds.ipynb
+++ b/Bite170/mcdonalds.ipynb
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,6 +693,53 @@
     "    if excl_drinks:\n",
     "        df = df[~df['Category'].isin(['Coffee & Tea', 'Beverages'])]\n",
     "    return df['Item'].head(5).values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Premium Bacon Ranch Salad with Grilled Chicken',\n",
+       "       'Nonfat Latte (Small)', 'Nonfat Latte (Large)',\n",
+       "       'Premium Southwest Salad with Grilled Chicken',\n",
+       "       'Nonfat Latte (Medium)'], dtype=object)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_bodybuilder_friendly_foods(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Premium Bacon Ranch Salad with Grilled Chicken',\n",
+       "       'Premium Southwest Salad with Grilled Chicken',\n",
+       "       'Premium Grilled Chicken Classic Sandwich',\n",
+       "       'Premium Grilled Chicken Ranch BLT Sandwich',\n",
+       "       'Premium Grilled Chicken Club Sandwich'], dtype=object)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_bodybuilder_friendly_foods(df, excl_drinks=True)"
    ]
   }
  ],
